# test

./: README.md
.github/workflows/: common-01.yml  common-02.yml  compile-run-01.yml  lab00-demo.yml  lab01-executor.yml  lab02-bigint.yml  lab03-widgets.yml  lab04-tic-tac-toe.yml  lab05-ptrs.yml  lab06-mytest.yml  lab07-interpreter.yml  lab08-bank.yml  lab09-bmp.yml  lab10-calc.yml  lab11-vector-naive.yml
common/: README.md
lab01-executor/solution/: executor.cpp  tests.txt
lab02-bigint/solution/: bigint_test.cpp
lab04-tic-tac-toe/: README.md
lab04-tic-tac-toe/solution/src/: main.cpp  view_compact.cpp
lab05-ptrs/: .clang-tidy  README.md
lab05-ptrs/solution/: shared_ptr_test.cpp  test_utils.hpp  unique_ptr_test.cpp
lab06-mytest/solution/: mytest.cpp  mytest_main.cpp
lab08-bank/: README.md
lab08-bank/solution/: .gitignore  CMakeLists.txt  bank_test.cpp  cppcheck-suppressions.txt  run-test-data.sh  run-test-server.py  tasks_info.cpp  test_utils.hpp
lab09-bmp/: README.md
lab09-bmp/solution/: .clang-tidy  .gitignore  CMakeLists.txt  run-test-data.sh  tests.txt
lab09-bmp/solution/src/: image_test.cpp  main.cpp
lab09-bmp/solution/test-data/: .gitignore  t3-01-monochrome.sol.txt
lab10-calc/: README.md
lab10-calc/solution/: .clang-tidy  .gitignore  CMakeLists.txt  calc_cli.c  calc_test.cpp  calc_test_c.c  demo-parser.c  run-test-data.sh  tasks_info.cpp  tests_config.h
lab10-calc/solution/test-data/: .gitignore  t3-bad-input.err  t3-smoke.in  t3-smoke.sol  t5-big.gen.py  t5-big.sol
lab11-vector-naive/: README.md
lab11-vector-naive/solution/: .clang-tidy  CMakeLists.txt  cppcheck-suppressions.txt  run-test-data.sh  vector.hpp  vector_config.hpp  vector_extra_tu.cpp  vector_test.cpp
